--- a/index.html
+++ b/index.html
@@ -1335,7 +1335,12 @@ function addStepNumberText(
     const marker = document.createElement('span');
     marker.textContent = `${i < cache.length ? cache[i] : getTextForIndex(i)}. `;
     marker.setAttribute('aria-hidden', 'true');
-    li.prepend(marker);
+    const attributesContainer = li.querySelector('.attributes-tag');
+    if (attributesContainer == null) {
+      li.prepend(marker);
+    } else {
+      attributesContainer.insertAdjacentElement('afterend', marker);
+    }
     for (const sublist of li.querySelectorAll(':scope > ol')) {
       addStepNumberText(sublist, depth + 1, special);
     }
@@ -1350,7 +1355,7 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 
 let sdoMap = JSON.parse(`{}`);
-let biblio = JSON.parse(`{"refsByClause":{},"entries":[{"type":"clause","id":"sec-symbol-isregistered","title":"Symbol.isRegistered ( value )","titleHTML":"Symbol.isRegistered ( <var>value</var> )","number":"20.4.2.5"},{"type":"clause","id":"sec-symbol-iswellknown","title":"Symbol.isWellKnown ( value )","titleHTML":"Symbol.isWellKnown ( <var>value</var> )","number":"20.4.2.6"},{"type":"clause","id":"sec-properties-of-the-symbol-constructor","titleHTML":"Properties of the Symbol Constructor","number":"20.4.2"},{"type":"clause","id":"sec-symbol-objects","titleHTML":"Symbol Objects","number":"20.4"},{"type":"clause","id":"sec-fundamental-objects","titleHTML":"Fundamental Objects","number":"20"},{"type":"clause","id":"sec-copyright-and-software-license","title":"Copyright & Software License","titleHTML":"Copyright &amp; Software License","number":"A"}]}`);
+let biblio = JSON.parse(`{"refsByClause":{},"entries":[{"type":"clause","id":"sec-symbol-isregisteredsymbol","title":"Symbol.isRegisteredSymbol ( value )","titleHTML":"Symbol.isRegisteredSymbol ( <var>value</var> )","number":"20.4.2.5"},{"type":"clause","id":"sec-symbol-iswellknownsymbol","title":"Symbol.isWellKnownSymbol ( value )","titleHTML":"Symbol.isWellKnownSymbol ( <var>value</var> )","number":"20.4.2.6"},{"type":"clause","id":"sec-properties-of-the-symbol-constructor","titleHTML":"Properties of the Symbol Constructor","number":"20.4.2"},{"type":"clause","id":"sec-symbol-objects","titleHTML":"Symbol Objects","number":"20.4"},{"type":"clause","id":"sec-fundamental-objects","titleHTML":"Fundamental Objects","number":"20"},{"type":"clause","id":"sec-copyright-and-software-license","title":"Copyright & Software License","titleHTML":"Copyright &amp; Software License","number":"A"}]}`);
 ;let usesMultipage = false</script><style>body {
   display: flex;
   word-wrap: break-word;
@@ -1457,6 +1462,10 @@ var {
   transition: background-color 0.25s ease;
   cursor: pointer;
 }
+var.field {
+  font: inherit;
+  color: inherit;
+}
 
 var.referenced0 {
   color: inherit;
@@ -1540,7 +1549,7 @@ emu-alg ol.nested-lots ol {
   list-style-type: lower-roman;
 }
 
-emu-alg [aria-hidden=true] {
+emu-alg [aria-hidden='true'] {
   font-size: 0;
 }
 
@@ -2554,19 +2563,19 @@ li.menu-search-result-term:before {
 }
 
 [normative-optional],
+[deprecated],
 [legacy] {
   border-left: 5px solid #ff6600;
   padding: 0.5em;
-  display: block;
   background: #ffeedd;
 }
 
-.clause-attributes-tag {
+.attributes-tag {
   text-transform: uppercase;
   color: #884400;
 }
 
-.clause-attributes-tag a {
+.attributes-tag a {
   color: #884400;
 }
 
@@ -2619,7 +2628,7 @@ li.menu-search-result-term:before {
 </ul></div><div id="menu-toggle"><svg xmlns="http://www.w3.org/2000/svg" style="width:100%; height:100%; stroke:currentColor" viewBox="0 0 120 120">
       <title>Menu</title>
       <path stroke-width="10" stroke-linecap="round" d="M30,60 h60  M30,30 m0,5 h60  M30,90 m0,-5 h60"></path>
-    </svg></div><div id="menu-spacer" class="menu-spacer"></div><div id="menu"><div id="menu-search"><input type="text" id="menu-search-box" placeholder="Search..."><div id="menu-search-results" class="inactive"></div></div><div id="menu-pins"><div class="menu-pane-header">Pins</div><ul id="menu-pins-list"></ul></div><div class="menu-pane-header">Table of Contents</div><div id="menu-toc"><ol class="toc"><li><span class="item-toggle">◢</span><a href="#sec-fundamental-objects" title="Fundamental Objects"><span class="secnum">20</span> Fundamental Objects</a><ol class="toc"><li><span class="item-toggle">◢</span><a href="#sec-symbol-objects" title="Symbol Objects"><span class="secnum">20.4</span> Symbol Objects</a><ol class="toc"><li><span class="item-toggle">◢</span><a href="#sec-properties-of-the-symbol-constructor" title="Properties of the Symbol Constructor"><span class="secnum">20.4.2</span> Properties of the Symbol Constructor</a><ol class="toc"><li><span class="item-toggle-none"></span><a href="#sec-symbol-isregistered" title="Symbol.isRegistered ( value )"><span class="secnum">20.4.2.5</span> Symbol.isRegistered ( <var>value</var> )</a></li><li><span class="item-toggle-none"></span><a href="#sec-symbol-iswellknown" title="Symbol.isWellKnown ( value )"><span class="secnum">20.4.2.6</span> Symbol.isWellKnown ( <var>value</var> )</a></li></ol></li></ol></li></ol></li><li><span class="item-toggle-none"></span><a href="#sec-copyright-and-software-license" title="Copyright &amp; Software License"><span class="secnum">A</span> Copyright &amp; Software License</a></li></ol></div></div><div id="spec-container"><h1 class="version">Stage 2 Draft / February 1, 2023</h1><h1 class="title">Symbol Predicates</h1>
+    </svg></div><div id="menu-spacer" class="menu-spacer"></div><div id="menu"><div id="menu-search"><input type="text" id="menu-search-box" placeholder="Search..."><div id="menu-search-results" class="inactive"></div></div><div id="menu-pins"><div class="menu-pane-header">Pins</div><ul id="menu-pins-list"></ul></div><div class="menu-pane-header">Table of Contents</div><div id="menu-toc"><ol class="toc"><li><span class="item-toggle">◢</span><a href="#sec-fundamental-objects" title="Fundamental Objects"><span class="secnum">20</span> Fundamental Objects</a><ol class="toc"><li><span class="item-toggle">◢</span><a href="#sec-symbol-objects" title="Symbol Objects"><span class="secnum">20.4</span> Symbol Objects</a><ol class="toc"><li><span class="item-toggle">◢</span><a href="#sec-properties-of-the-symbol-constructor" title="Properties of the Symbol Constructor"><span class="secnum">20.4.2</span> Properties of the Symbol Constructor</a><ol class="toc"><li><span class="item-toggle-none"></span><a href="#sec-symbol-isregisteredsymbol" title="Symbol.isRegisteredSymbol ( value )"><span class="secnum">20.4.2.5</span> Symbol.isRegisteredSymbol ( <var>value</var> )</a></li><li><span class="item-toggle-none"></span><a href="#sec-symbol-iswellknownsymbol" title="Symbol.isWellKnownSymbol ( value )"><span class="secnum">20.4.2.6</span> Symbol.isWellKnownSymbol ( <var>value</var> )</a></li></ol></li></ol></li></ol></li><li><span class="item-toggle-none"></span><a href="#sec-copyright-and-software-license" title="Copyright &amp; Software License"><span class="secnum">A</span> Copyright &amp; Software License</a></li></ol></div></div><div id="spec-container"><h1 class="version">Stage 2 Draft / May 15, 2023</h1><h1 class="title">Symbol Predicates</h1>
 
 <emu-clause id="sec-fundamental-objects" number="20">
   <h1><span class="secnum">20</span> Fundamental Objects</h1>
@@ -2630,17 +2639,17 @@ li.menu-search-result-term:before {
     <emu-clause id="sec-properties-of-the-symbol-constructor" number="2">
       <h1><span class="secnum">20.4.2</span> Properties of the Symbol Constructor</h1>
 
-      <emu-clause id="sec-symbol-isregistered" number="5">
-        <h1><span class="secnum">20.4.2.5</span> Symbol.isRegistered ( <var>value</var> )</h1>
+      <emu-clause id="sec-symbol-isregisteredsymbol" number="5">
+        <h1><span class="secnum">20.4.2.5</span> Symbol.isRegisteredSymbol ( <var>value</var> )</h1>
 
-        <p>When the <code>isRegistered</code> method is called with arguments <var>value</var>, the following steps are taken:</p>
-        <emu-alg><ol><li>Let <var>result</var> be <emu-xref aoid="Completion"><a href="https://tc39.es/ecma262/#sec-completion-ao">Completion</a></emu-xref>(<emu-xref href="#thissymbolvalue"><a href="https://tc39.es/ecma262/#thissymbolvalue">thisSymbolValue</a></emu-xref>(<var>value</var>)).</li><li>If <var>result</var> is an <emu-xref href="#sec-completion-record-specification-type"><a href="https://tc39.es/ecma262/#sec-completion-record-specification-type">abrupt completion</a></emu-xref>, return <emu-val>false</emu-val>.</li><li><emu-xref href="#assert"><a href="https://tc39.es/ecma262/#assert">Assert</a></emu-xref>: <emu-xref aoid="Type"><a href="https://tc39.es/ecma262/#sec-ecmascript-data-types-and-values">Type</a></emu-xref>(! <var>result</var>) is Symbol.</li><li>Return KeyForSymbol(! <var>result</var>) is String.</li></ol></emu-alg>
+        <p>When the <code>isRegisteredSymbol</code> method is called with arguments <var>value</var>, the following steps are taken:</p>
+        <emu-alg><ol><li>Let <var>result</var> be <emu-xref aoid="Completion"><a href="https://tc39.es/ecma262/#sec-completion-ao">Completion</a></emu-xref>(<emu-xref href="#thissymbolvalue"><a href="https://tc39.es/ecma262/#thissymbolvalue">thisSymbolValue</a></emu-xref>(<var>value</var>)).</li><li>If <var>result</var> is an <emu-xref href="#sec-completion-record-specification-type"><a href="https://tc39.es/ecma262/#sec-completion-record-specification-type">abrupt completion</a></emu-xref>, return <emu-val>false</emu-val>.</li><li><emu-xref href="#assert"><a href="https://tc39.es/ecma262/#assert">Assert</a></emu-xref>: <emu-xref aoid="Type"><a href="https://tc39.es/ecma262/#sec-ecmascript-data-types-and-values">Type</a></emu-xref>(! <var>result</var>) is Symbol.</li><li>Return <emu-xref aoid="KeyForSymbol"><a href="https://tc39.es/ecma262/#sec-keyforsymbol">KeyForSymbol</a></emu-xref>(! <var>result</var>) is String.</li></ol></emu-alg>
       </emu-clause>
 
-      <emu-clause id="sec-symbol-iswellknown">
-        <h1><span class="secnum">20.4.2.6</span> Symbol.isWellKnown ( <var>value</var> )</h1>
+      <emu-clause id="sec-symbol-iswellknownsymbol">
+        <h1><span class="secnum">20.4.2.6</span> Symbol.isWellKnownSymbol ( <var>value</var> )</h1>
 
-        <p>When the <code>isWellKnown</code> method is called with arguments <var>value</var>, the following steps are taken:</p>
+        <p>When the <code>isWellKnownSymbol</code> method is called with arguments <var>value</var>, the following steps are taken:</p>
         <emu-alg><ol><li>Let <var>result</var> be <emu-xref aoid="Completion"><a href="https://tc39.es/ecma262/#sec-completion-ao">Completion</a></emu-xref>(<emu-xref href="#thissymbolvalue"><a href="https://tc39.es/ecma262/#thissymbolvalue">thisSymbolValue</a></emu-xref>(<var>value</var>)).</li><li>If <var>result</var> is an <emu-xref href="#sec-completion-record-specification-type"><a href="https://tc39.es/ecma262/#sec-completion-record-specification-type">abrupt completion</a></emu-xref>, return <emu-val>false</emu-val>.</li><li><emu-xref href="#assert"><a href="https://tc39.es/ecma262/#assert">Assert</a></emu-xref>: <emu-xref aoid="Type"><a href="https://tc39.es/ecma262/#sec-ecmascript-data-types-and-values">Type</a></emu-xref>(! <var>result</var>) is Symbol.</li><li>If !&nbsp;<var>result</var> is one of the values listed in <emu-xref href="#table-well-known-symbols"><a href="https://tc39.es/ecma262/#table-well-known-symbols">Table 1</a></emu-xref>, return <emu-val>true</emu-val>.</li><li>Return <emu-val>false</emu-val>.</li></ol></emu-alg>
       </emu-clause>
     </emu-clause>
